# shrimp

./: Cargo.toml  README.md
src/: main.rs
src/shrimp/: file_types.rs  get_file.rs  get_file_metadata.rs  get_files.rs  head_file.rs  mod.rs  server_config.rs  server_state.rs
