[package]
name = "shrimp"
version = "0.1.0"
authors = ["Artur Mazurek <artur.s.mazurek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
rocket = "0.5.0-rc.1"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9.5"